# InternetApplications

./: CMakeLists.txt  dhcp-client.c  dns-root-server.txt  dns-second-server-a.c  dns-second-server-a.txt  dns-tld-server-a.c  dns-tld-server-b.c  dns-tld-server-b.txt  l7-Server.c
DHCP-Project/: dhcp-client.c
DNS-Project/: dns-client.c  dns-local-server.c  dns-project.h  dns-root-server-arpa.c  dns-root-server-arpa.txt  dns-root-server.c  dns-root-server.txt  dns-second-server-b.c  dns-second-server-b.txt  dns-tld-server-a.txt  dns-tld-server-b.txt
